--- a/style_chmduquesne.css
+++ b/style_chmduquesne.css
@@ -1,3 +1,4 @@
+<script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
 <style type="text/css">
 /*
  * Copyright 2013 Christophe-Marie Duquesne <chmd@chmd.fr>
